# agentic-ai-cyberres

./: .env.template  .gitignore  BEEAI_CODEBASE_REVIEW_AND_OPTIMIZATION_PLAN.md  PHASE2_DYNAMIC_DISCOVERY_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_FIX_APPLICATION_DISCOVERY.md  TECHNICAL_ARCHITECTURE_PRESENTATION.md  nltk_donwload.py  package-lock.json  package.json  requirements.txt
python/cyberres-mcp/: .env.example  MCP_SERVER_MODES.md  README.md  VALUE_PROPOSITION.md  __init__.py  claude_desktop_config.json  demo-secrets.json  models.py  pyproject.toml  pyrightconfig.json  secrets.example.json  server.py  settings.py  test_raw_data_collector.py  test_sprint1.py  test_sprint2.py  test_ssh_utils.py  verify_installation.py
python/cyberres-mcp/demo/: DEMO_SCRIPT.md  FINAL_DEMO_SCRIPT.md  RESOURCES_AND_PROMPTS_DEMO.md  example-requests.json  oracle-discovery-example.md  pre-demo-test.sh  tool-examples.md
python/cyberres-mcp/docs/: ARCHITECTURE_ANALYSIS.md  CLAUDE_DESKTOP_SETUP.md  CLAUDE_TESTING_GUIDE.md  CREDENTIALS_CONFIG.md  CREDENTIALS_GUIDE.md  CREDENTIALS_LOADED.md  DEMO_QUICK_REFERENCE.md  END_TO_END_README.md  FINAL_DEMO_INSTRUCTIONS.md  FINAL_FIX_SUMMARY.md  HOW_TO_USE_WITHOUT_PASSWORDS.md  HYBRID_IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  LLM_ENHANCED_DETECTION.md  MCP_INSPECTOR_GUIDE.md  QUICK_TEST_GUIDE.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  SINGLE_PROMPT_WORKFLOW.md  SPRINT1_SUMMARY.md  SPRINT1_TESTING_GUIDE.md  SPRINT2_SUMMARY.md  STOP_AND_RESTART.md  (+7 more)
python/src/: .env.example  AGENTIC_WORKFLOW_COMPREHENSIVE_DOCUMENTATION.md  BEEAI_DEMO_GUIDE.md  BEEAI_FIX_IMPLEMENTATION_PLAN.md  BEEAI_HOW_TO_RUN.md  BEEAI_IMPLEMENTATION_COMPLETE.md  BEEAI_IMPLEMENTATION_FINAL_SUMMARY.md  BEEAI_IMPLEMENTATION_PROGRESS.md  BEEAI_IMPLEMENTATION_REVIEW.md  BEEAI_MIGRATION_ANALYSIS_AND_PLAN.md  BEEAI_MIGRATION_GUIDE.md  BEEAI_MIGRATION_PLAN.md  BEEAI_OPTIMIZATION_COMPLETE_SUMMARY.md  BEEAI_PROJECT_FINAL_SUMMARY.md  BEEAI_QUICK_START.md  BEEAI_TESTING_GUIDE.md  BEEAI_VALIDATION_RUN_GUIDE.md  CLEANUP_COMPLETED.md  FILE_CLEANUP_PLAN.md  FILE_COMPARISON_ANALYSIS.md  HOW_TO_RUN.md  INSTALL_MCP_SDK.md  PHASE1_WEEK1_SUMMARY.md  PHASE1_WEEK2_SUMMARY.md  PHASE2_TESTING_GUIDE.md  PHASE2_WEEK3_SUMMARY.md  PHASE2_WEEK4_SUMMARY.md  PHASE2_WEEK5_SUMMARY.md  PHASE3_MCP_BEST_PRACTICES.md  PHASE3_WEEK6_SUMMARY.md  PHASE3_WEEK7_SUMMARY.md  PHASE4_IMPLEMENTATION_PLAN.md  PHASE4_WEEK8_SUMMARY.md  QUICK_START.md  QUICK_START_OLLAMA.md  README.md  README_AGENTIC_TRANSFORMATION.md  RECOVERY_VALIDATION_README.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  (+56 more)
(+135 files in other folders)
